[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hisss-pz"
version = "0.1.0"
description = "PettingZoo Parallel environment wrapping the hisss BattleSnake simulator"
requires-python = ">=3.12"
dependencies = [
    "hisss",
    "pettingzoo>=1.24",
    "gymnasium>=0.29",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hisss_pz"]
